--- a/main.kv
+++ b/main.kv
@@ -7,9 +7,6 @@ MW:
     Intt:
     Siu:
     Ero:
-    Fw:
-    Sw:
-    Tw:
     Lm:
     La:
     QA:
@@ -273,9 +270,6 @@ MW:
             Button:
                 text:'Basics'
                 background_color:(0,0,0, 1)
-                on_release:
-                    app.root.current="mapp"
-                    root.manager.transition.direction="up"
 
             Button:
                 text:'madium'
@@ -306,7 +300,15 @@ MW:
                 size_hint:(1,.1)
                 background_color:(12/255,126/255,200/255,1)
                 font_size:20
-                text:'Try again'
+                text:'syntax'
+                on_release:
+                    app.root.current="main"
+                    root.manager.transition.direction="down"
+            Button:
+                size_hint:(1,.1)
+                background_color:(12/255,126/255,200/255,1)
+                font_size:18
+                text:'varible&data types'
                 on_release:
                     app.root.current="main"
                     root.manager.transition.direction="down"
@@ -314,7 +316,7 @@ MW:
                 size_hint:(1,.1)
                 background_color:(12/255,126/255,200/255,1)
                 font_size:20
-                text:'Try again'
+                text:'booleans'
                 on_release:
                     app.root.current="main"
                     root.manager.transition.direction="down"
@@ -322,7 +324,7 @@ MW:
                 size_hint:(1,.1)
                 background_color:(12/255,126/255,200/255,1)
                 font_size:20
-                text:'Try again'
+                text:'numbers'
                 on_release:
                     app.root.current="main"
                     root.manager.transition.direction="down"
@@ -330,7 +332,7 @@ MW:
                 size_hint:(1,.1)
                 background_color:(12/255,126/255,200/255,1)
                 font_size:20
-                text:'Try again'
+                text:'strings'
                 on_release:
                     app.root.current="main"
                     root.manager.transition.direction="down"
@@ -338,7 +340,7 @@ MW:
                 size_hint:(1,.1)
                 background_color:(12/255,126/255,200/255,1)
                 font_size:20
-                text:'Try again'
+                text:'lists'
                 on_release:
                     app.root.current="main"
                     root.manager.transition.direction="down"
@@ -346,7 +348,7 @@ MW:
                 size_hint:(1,.1)
                 background_color:(12/255,126/255,200/255,1)
                 font_size:20
-                text:'Try again'
+                text:'for loop'
                 on_release:
                     app.root.current="main"
                     root.manager.transition.direction="down"
@@ -354,7 +356,7 @@ MW:
                 size_hint:(1,.1)
                 background_color:(12/255,126/255,200/255,1)
                 font_size:20
-                text:'Try again'
+                text:'if&else'
                 on_release:
                     app.root.current="main"
                     root.manager.transition.direction="down"
@@ -362,7 +364,7 @@ MW:
                 size_hint:(1,.1)
                 background_color:(12/255,126/255,200/255,1)
                 font_size:20
-                text:'Try again'
+                text:'functions'
                 on_release:
                     app.root.current="main"
                     root.manager.transition.direction="down"
@@ -370,15 +372,7 @@ MW:
                 size_hint:(1,.1)
                 background_color:(12/255,126/255,200/255,1)
                 font_size:20
-                text:'Try again'
-                on_release:
-                    app.root.current="main"
-                    root.manager.transition.direction="down"
-            Button:
-                size_hint:(1,.1)
-                background_color:(12/255,126/255,200/255,1)
-                font_size:20
-                text:'Try again'
+                text:'full example'
                 on_release:
                     app.root.current="main"
                     root.manager.transition.direction="down"
@@ -402,9 +396,6 @@ MW:
             Button:
                 text:'madium'
                 background_color:(0,0,0, 1)
-                on_release:
-                    app.root.current="lm"
-                    root.manager.transition.direction="up"
             Button:
                 text:'Advance'
                 background_color:(12/255,126/255,200/255,1)
@@ -421,7 +412,7 @@ MW:
         GridLayout:
             rows:11
             Label:
-                text:'Basics'
+                text:'medium'
                 color:(12/255,126/255,200/255,1)
                 size_hint:(1,.08)
                 font_size:30
@@ -429,7 +420,7 @@ MW:
                 size_hint:(1,.1)
                 background_color:(12/255,126/255,200/255,1)
                 font_size:20
-                text:'Try again'
+                text:'classes'
                 on_release:
                     app.root.current="main"
                     root.manager.transition.direction="down"
@@ -437,7 +428,15 @@ MW:
                 size_hint:(1,.1)
                 background_color:(12/255,126/255,200/255,1)
                 font_size:20
-                text:'Try again'
+                text:'oop'
+                on_release:
+                    app.root.current="main"
+                    root.manager.transition.direction="down"
+            Button:
+                size_hint:(1,.1)
+                background_color:(12/255,126/255,200/255,1)
+                font_size:18
+                text:'built in functions'
                 on_release:
                     app.root.current="main"
                     root.manager.transition.direction="down"
@@ -445,7 +444,7 @@ MW:
                 size_hint:(1,.1)
                 background_color:(12/255,126/255,200/255,1)
                 font_size:20
-                text:'Try again'
+                text:'map'
                 on_release:
                     app.root.current="main"
                     root.manager.transition.direction="down"
@@ -453,7 +452,7 @@ MW:
                 size_hint:(1,.1)
                 background_color:(12/255,126/255,200/255,1)
                 font_size:20
-                text:'Try again'
+                text:'reduce'
                 on_release:
                     app.root.current="main"
                     root.manager.transition.direction="down"
@@ -461,7 +460,7 @@ MW:
                 size_hint:(1,.1)
                 background_color:(12/255,126/255,200/255,1)
                 font_size:20
-                text:'Try again'
+                text:'filter'
                 on_release:
                     app.root.current="main"
                     root.manager.transition.direction="down"
@@ -469,7 +468,15 @@ MW:
                 size_hint:(1,.1)
                 background_color:(12/255,126/255,200/255,1)
                 font_size:20
-                text:'Try again'
+                text:'Regex'
+                on_release:
+                    app.root.current="main"
+                    root.manager.transition.direction="down"
+            Button:
+                size_hint:(1,.1)
+                background_color:(12/255,126/255,200/255,1)
+                font_size:18
+                text:'convert data types'
                 on_release:
                     app.root.current="main"
                     root.manager.transition.direction="down"
@@ -477,7 +484,7 @@ MW:
                 size_hint:(1,.1)
                 background_color:(12/255,126/255,200/255,1)
                 font_size:20
-                text:'Try again'
+                text:'Decorator'
                 on_release:
                     app.root.current="main"
                     root.manager.transition.direction="down"
@@ -485,23 +492,7 @@ MW:
                 size_hint:(1,.1)
                 background_color:(12/255,126/255,200/255,1)
                 font_size:20
-                text:'Try again'
-                on_release:
-                    app.root.current="main"
-                    root.manager.transition.direction="down"
-            Button:
-                size_hint:(1,.1)
-                background_color:(12/255,126/255,200/255,1)
-                font_size:20
-                text:'Try again'
-                on_release:
-                    app.root.current="main"
-                    root.manager.transition.direction="down"
-            Button:
-                size_hint:(1,.1)
-                background_color:(12/255,126/255,200/255,1)
-                font_size:20
-                text:'Try again'
+                text:'full example'
                 on_release:
                     app.root.current="main"
                     root.manager.transition.direction="down"
@@ -531,9 +522,6 @@ MW:
             Button:
                 text:'Advance'
                 background_color:(0,0,0, 1)
-                on_release:
-                    app.root.current="la"
-                    root.manager.transition.direction="up"
             Button:
                 text:'Q&A'
                 background_color:(12/255,126/255,200/255,1)
@@ -544,15 +532,15 @@ MW:
         GridLayout:
             rows:11
             Label:
-                text:'Advanced'
+                text:'Advanced [Algorathms and data structure]'
                 color:(12/255,126/255,200/255,1)
                 size_hint:(1,.08)
-                font_size:30
+                font_size:15
             Button:
                 size_hint:(1,.1)
                 background_color:(12/255,126/255,200/255,1)
                 font_size:20
-                text:'Try again'
+                text:'searching'
                 on_release:
                     app.root.current="main"
                     root.manager.transition.direction="down"
@@ -560,7 +548,7 @@ MW:
                 size_hint:(1,.1)
                 background_color:(12/255,126/255,200/255,1)
                 font_size:20
-                text:'Try again'
+                text:'linear search'
                 on_release:
                     app.root.current="main"
                     root.manager.transition.direction="down"
@@ -568,7 +556,7 @@ MW:
                 size_hint:(1,.1)
                 background_color:(12/255,126/255,200/255,1)
                 font_size:20
-                text:'Try again'
+                text:'Binary search'
                 on_release:
                     app.root.current="main"
                     root.manager.transition.direction="down"
@@ -576,7 +564,7 @@ MW:
                 size_hint:(1,.1)
                 background_color:(12/255,126/255,200/255,1)
                 font_size:20
-                text:'Try again'
+                text:'sorting'
                 on_release:
                     app.root.current="main"
                     root.manager.transition.direction="down"
@@ -584,7 +572,7 @@ MW:
                 size_hint:(1,.1)
                 background_color:(12/255,126/255,200/255,1)
                 font_size:20
-                text:'Try again'
+                text:'selection sort'
                 on_release:
                     app.root.current="main"
                     root.manager.transition.direction="down"
@@ -592,7 +580,7 @@ MW:
                 size_hint:(1,.1)
                 background_color:(12/255,126/255,200/255,1)
                 font_size:20
-                text:'Try again'
+                text:'heap sort'
                 on_release:
                     app.root.current="main"
                     root.manager.transition.direction="down"
@@ -600,7 +588,7 @@ MW:
                 size_hint:(1,.1)
                 background_color:(12/255,126/255,200/255,1)
                 font_size:20
-                text:'Try again'
+                text:'Binary tree'
                 on_release:
                     app.root.current="main"
                     root.manager.transition.direction="down"
@@ -608,7 +596,7 @@ MW:
                 size_hint:(1,.1)
                 background_color:(12/255,126/255,200/255,1)
                 font_size:20
-                text:'Try again'
+                text:'Recurcion'
                 on_release:
                     app.root.current="main"
                     root.manager.transition.direction="down"
@@ -616,7 +604,7 @@ MW:
                 size_hint:(1,.1)
                 background_color:(12/255,126/255,200/255,1)
                 font_size:20
-                text:'Try again'
+                text:'stack'
                 on_release:
                     app.root.current="main"
                     root.manager.transition.direction="down"
@@ -624,7 +612,7 @@ MW:
                 size_hint:(1,.1)
                 background_color:(12/255,126/255,200/255,1)
                 font_size:20
-                text:'Try again'
+                text:'full example'
                 on_release:
                     app.root.current="main"
                     root.manager.transition.direction="down"
@@ -660,11 +648,8 @@ MW:
             Button:
                 text:'Q&A'
                 background_color:(0,0,0, 1)
-                on_release:
-                    app.root.current="qa"
-                    root.manager.transition.direction="up"
         GridLayout:
-            rows:11
+            rows:6
             Label:
                 text:'Q&A'
                 color:(12/255,126/255,200/255,1)
@@ -674,7 +659,7 @@ MW:
                 size_hint:(1,.1)
                 background_color:(12/255,126/255,200/255,1)
                 font_size:20
-                text:'Try again'
+                text:'why python'
                 on_release:
                     app.root.current="main"
                     root.manager.transition.direction="down"
@@ -682,7 +667,15 @@ MW:
                 size_hint:(1,.1)
                 background_color:(12/255,126/255,200/255,1)
                 font_size:20
-                text:'Try again'
+                text:'what can python do'
+                on_release:
+                    app.root.current="main"
+                    root.manager.transition.direction="down"
+            Button:
+                size_hint:(1,.1)
+                background_color:(12/255,126/255,200/255,1)
+                font_size:15
+                text:'can i work in big companies with python'
                 on_release:
                     app.root.current="main"
                     root.manager.transition.direction="down"
@@ -690,66 +683,15 @@ MW:
                 size_hint:(1,.1)
                 background_color:(12/255,126/255,200/255,1)
                 font_size:20
-                text:'Try again'
+                text:'where i find python jobs'
                 on_release:
                     app.root.current="main"
                     root.manager.transition.direction="down"
-            Button:
-                size_hint:(1,.1)
-                background_color:(12/255,126/255,200/255,1)
+            Label:
+                text:'soon the more'
+                color:(12/255,126/255,200/255,1)
+                size_hint:(1,.3)
                 font_size:20
-                text:'Try again'
-                on_release:
-                    app.root.current="main"
-                    root.manager.transition.direction="down"
-            Button:
-                size_hint:(1,.1)
-                background_color:(12/255,126/255,200/255,1)
-                font_size:20
-                text:'Try again'
-                on_release:
-                    app.root.current="main"
-                    root.manager.transition.direction="down"
-            Button:
-                size_hint:(1,.1)
-                background_color:(12/255,126/255,200/255,1)
-                font_size:20
-                text:'Try again'
-                on_release:
-                    app.root.current="main"
-                    root.manager.transition.direction="down"
-            Button:
-                size_hint:(1,.1)
-                background_color:(12/255,126/255,200/255,1)
-                font_size:20
-                text:'Try again'
-                on_release:
-                    app.root.current="main"
-                    root.manager.transition.direction="down"
-            Button:
-                size_hint:(1,.1)
-                background_color:(12/255,126/255,200/255,1)
-                font_size:20
-                text:'Try again'
-                on_release:
-                    app.root.current="main"
-                    root.manager.transition.direction="down"
-            Button:
-                size_hint:(1,.1)
-                background_color:(12/255,126/255,200/255,1)
-                font_size:20
-                text:'Try again'
-                on_release:
-                    app.root.current="main"
-                    root.manager.transition.direction="down"
-            Button:
-                size_hint:(1,.1)
-                background_color:(12/255,126/255,200/255,1)
-                font_size:20
-                text:'Try again'
-                on_release:
-                    app.root.current="main"
-                    root.manager.transition.direction="down"
 
 
 
